# adventofcode

./: .gitignore  deno.json  import_map.json
2022/day1/: day1.ts
2022/day6/: day6.ts
src/2020/day13/: day13.ts
src/2020/day18/: main.noul
src/2022/day11/: interactive.py  main.py
src/2022/day12/: d.py  interactive.py  main.py
src/2022/day21/: anight_style.py  aoc_ast.py  aoc_lexer.py  aoc_parser.py  day21.out  day21.py  fib.py  main.py
src/2022/day21/aoc/ast/: BinOp.py  Identifier.py  Number.py  Program.py  Visitor.py  __init__.py  binop.py  identifier.py  program.py  visitor.py
src/2022/day21/aoc/parser/: AocParser.py  __init__.py  parser.py
src/2022/day25/: main.py  test.py
src/2022/day7/: main.ts
src/2022/day9/: day9.py  enchanced.py
src/2023/: data.csv  notebook.ipynb
src/2023/.ipynb_checkpoints/: notebook-checkpoint.ipynb
src/2023/05/: night.py
src/2023/23/: notebook_22.ipynb
src/2023/24/: note_24.ipynb
src/2023/24/rust/: Cargo.toml
src/2023/24/rust/src/: main.rs
src/2023/24/untitled/: Cargo.toml
src/2023/24/untitled/src/: main.rs  shader.wgsl
src/2023/25/: note-25.ipynb
src/2023/25/rust/: Cargo.toml
src/2023/25/rust/src/: main.rs
src/2024/: Cargo.toml  benchmarks.txt  day-06.bench.txt  day-09.bench.txt  justfile
src/2024/06/rust/: Cargo.toml
src/2024/06/rust/src/: lib.rs  main.rs
src/2024/09/: Cargo.toml
src/2024/09/src/: lib.rs  main.rs  part1.rs  part2.rs
src/2024/daily-template/: Cargo.toml  README.md
src/2024/daily-template/benches/: benchmarks.rs
src/2024/daily-template/src/: lib.rs  main.rs  parser.rs  part1.rs  part2.rs  part_1.rs  part_2.rs
src/2024/day-01/: Cargo.toml
src/2024/day-01/src/: main.rs
src/2024/day-02/: 1.txt
src/2024/day-02/haskel/: CHANGELOG.md  d2.cabal  package.yaml
src/2024/day-02/haskel/app/: Main.hs
src/2024/day-02/haskel/src/: Lib.hs
src/2024/day-02/noul/: task-2024-02.noul
src/2024/day-02/rust/: 2.txt
src/2024/day-02/rust/src/: main.rs
src/2024/day-02/src/: main.rs
src/2024/day-03/src/: main.rs
src/2024/day-04/rust/src/: lib.rs  main.rs
src/2024/day-05/rust/: Cargo.toml
src/2024/day-05/rust/src/: main.rs
src/2024/day-06/rust/: Cargo.toml
src/2024/day-06/rust/src/: main.rs
src/2024/day-06/src/: lib.rs  part1.rs  part2.rs
src/2024/day-07/rust/: Cargo.toml
src/2024/day-07/rust/src/: main.rs
src/2024/day-08/rust/: Cargo.toml
src/2024/day-08/rust/src/: main.rs
src/2024/day-09/: Cargo.toml
src/2024/day-09/src/: part1.rs  part2.rs
src/2024/day-10/: Cargo.toml  README.md  justfile
src/2024/day-10/benches/: benchmarks.rs
src/2024/day-10/src/: lib.rs  main.rs  parser.rs  part1.rs  part2.rs
src/2024/day-10/src/utils/: utils.rs
src/2024/day-11/: Cargo.toml  README.md
src/2024/day-11/benches/: benchmarks.rs
src/2024/day-11/src/: lib.rs  main.rs  parser.rs  part1.rs  part2.rs
src/2024/day-12/: Cargo.toml
src/2024/day-12/benches/: benchmarks.rs
src/2024/day-12/src/: main.rs  parser.rs  part1.rs  part2.rs
src/2024/day-13/: Cargo.toml  README.md
src/2024/day-13/benches/: benchmarks.rs
src/2024/day-13/src/: lib.rs  main.rs  parser.rs  part1.rs  part1_complex_nums.rs  part2.rs
src/2024/day-14/: Cargo.toml  README.md  chart.numbers  picture.txt
src/2024/day-14/benches/: benchmarks.rs
src/2024/day-14/src/: lib.rs  main.rs  models.rs  parser.rs  part1.rs  part2.rs
src/2024/day-15/: Cargo.toml  README.md
src/2024/day-15/benches/: benchmarks.rs
src/2024/day-15/src/: lib.rs  main.rs  models.rs  parser.rs  part1.rs  part2.rs  robot2.rs
src/2024/day-16/: Cargo.toml  README.md
src/2024/day-16/benches/: benchmarks.rs
src/2024/day-16/src/: labyrinth_solver.rs  lib.rs  main.rs  parser.rs  part1.rs  part2.rs
src/2024/day-16/src/utils/: core.rs
src/2024/day-17/: Cargo.toml  README.md
src/2024/day-17/benches/: benchmarks.rs
src/2024/day-17/src/: computer.rs  lib.rs  main.rs  parser.rs  part1.rs  part2.rs
src/2024/day-18/: Cargo.toml  README.md
src/2024/day-18/benches/: benchmarks.rs
src/2024/day-18/src/: lib.rs  main.rs  parser.rs  part1.rs  part2.rs  petgraph_version.rs
src/2024/day-18/src/utils/: core.rs  mod.rs
src/2024/day-19/: Cargo.toml  README.md
src/2024/day-19/benches/: benchmarks.rs
src/2024/day-19/src/: main.rs  parser.rs  part1.rs  part2.rs
src/2024/day-19/src/utils/: core.rs
src/2024/day-20/src/utils/: maze.rs
src/2024/day-21/: Cargo.toml  README.md
src/2024/day-21/benches/: benchmarks.rs
src/2024/day-21/src/: lib.rs  main.rs
src/2024/day-21/src/utils/: maze.rs
src/2024/day-22/: Cargo.toml  README.md
src/2024/day-22/benches/: benchmarks.rs
src/2024/day-22/src/: lib.rs  main.rs  parser.rs  part_1.rs  part_2.rs  shared.rs
src/2024/day-23/: Cargo.toml  README.md
src/2024/day-23/benches/: benchmarks.rs
src/2024/day-23/src/: lib.rs  main.rs  parser.rs  part_1.rs  part_2.rs
src/2024/day-23/src/utils/: core.rs
src/2024/day-25/: Cargo.toml  justfile
src/2024/day-25/src/: main.rs
src/2024/day-25_/: README.md
src/2024/scripts/: get-aoc-input.rs
src/utils/: index.ts  interactive .py  load-input.ts  permutation.ts  split.ts
src/utils/__tests__/: split.test.ts
utils/: load-input.ts
