[package]
name = "day-01"
version = "0.1.0"
edition = "2021"

#[[bench]]
#name = "day-01"
#harness = false

[dependencies]
tokio = {  version = "1.41.1", features = ["full"] }
miette = "7.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
divan = "0.1.17"
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
test-log = {version = "0.2.16", default-features = false, features = ["trace"]}
glam = "0.29.2"
itertools = "0.13.0"
rayon = "1.10.0"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
thiserror = "2.0.5"
petgraph = "0.6.5"
nalgebra = "0.33.2"
nalgebra-numpy = "0.3.0"
bevy = "0.15.0"
ratatui = "0.29.0"
num = "0.4.3"
num-complex = "0.4.6"