[package]
name = "day-09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
rayon.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-09-bench"
path = "benches/benchmarks.rs"
harness = false

[profile.release]
opt-level = "s"      # Максимальный уровень оптимизации (по умолчанию для --release)
lto = "thin"         # Включить линкерные оптимизации (может улучшить производительность)
codegen-units = 1    # Снизить количество параллельных единиц кода для лучшей оптимизации
debug = false        # Убрать символы отладки
panic = "abort"      # Использовать "abort" вместо unwind для уменьшения размера кода
