[package]
name = "day-22"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
itertools = "0.13.0"
rayon = "1.10.0"
code-timing-macros = { version = "0.0.5", features = ["release"] }
divan = "0.1.7"
geo = "0.29.3"
petgraph = "0.6.5"
smallvec = { version = "1.13.2", features = ["const_generics"] }
ahash = "0.8.11"
crossbeam = "0.8.4"
lazy_static = "1.4.0"


[clippy]
warn = ["all"]

[profile.release]
opt-level = "s"      # Максимальный уровень оптимизации (по умолчанию для --release)
lto = "fat"         # Включить линкерные оптимизации (может улучшить производительность)
codegen-units = 1    # Снизить количество параллельных единиц кода для лучшей оптимизации
debug = false        # Убрать символы отладки
panic = "abort"      # Использовать "abort" вместо unwind для уменьшения размера кода

[[bench]]
name = "benchmark"
path = "benches/benchmarks.rs"
harness = false
