[package]
name = "day-08"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
itertools = "0.13.0"
rayon = "1.10.0"

[profile.release]
opt-level = "s"      # Максимальный уровень оптимизации (по умолчанию для --release)
lto = "thin"         # Включить линкерные оптимизации (может улучшить производительность)
codegen-units = 1    # Снизить количество параллельных единиц кода для лучшей оптимизации
debug = false        # Убрать символы отладки
panic = "abort"      # Использовать "abort" вместо unwind для уменьшения размера кода
